--- a/emacs.org
+++ b/emacs.org
@@ -1897,3 +1897,33 @@ We want to be able to edit CMake files in a sane way.
 (require 'dired-x)
 #+end_src
 
+** Kill line with universal prefix
+
+   This macro provides the following functionality:
+   - when pressing C-k I get the original C-k behavior
+   - when pressing C-<n> C-k (where n is a numeric prefix) I kill the complete current + (n-1) lines
+
+   The idea is shamelessly stolen from [[http://endlessparentheses.com/kill-entire-line-with-prefix-argument.html][Endless Parenthesis]]
+
+#+begin_src elisp
+(defmacro bol-with-prefix (function)
+  "Define a new function which calls FUNCTION.
+Except it moves to beginning of line before calling FUNCTION when
+called with a prefix argument. The FUNCTION still receives the
+prefix argument."
+  (let ((name (intern (format "endless/%s-BOL" function))))
+    `(progn
+       (defun ,name (p)
+         ,(format 
+           "Call `%s', but move to BOL when called with a prefix argument."
+           function)
+         (interactive "P")
+         (when p
+           (forward-line 0))
+         (call-interactively ',function))
+       ',name)))
+
+(global-set-key [remap paredit-kill] (bol-with-prefix paredit-kill))
+(global-set-key [remap org-kill-line] (bol-with-prefix org-kill-line))
+(global-set-key [remap kill-line] (bol-with-prefix paredit-kill))
+#+end_src
