fix: set indent offset to 2 for js2-mode

--- a/emacs.org
+++ b/emacs.org
@@ -1823,7 +1823,9 @@ We want to be able to edit CMake files in a sane way.
     :commands js2-mode
     :init
     (add-to-list 'auto-mode-alist '("\\.js\\'" . js2-mode))
-    (add-to-list 'interpreter-mode-alist '("node" . js2-mode)))
+    (add-to-list 'interpreter-mode-alist '("node" . js2-mode))
+    (custom-set-variables
+      '(js2-basic-offset 2)))
 #+end_src
 
 ** Tramp
