removing swift-mode from flycheck is no longer necessary

--- a/emacs.org
+++ b/emacs.org
@@ -1813,9 +1813,7 @@ We want to be able to edit CMake files in a sane way.
 (use-package swift-mode
   :commands swift-mode
   :init
-  (setq swift-indent-offset 2)
-  :config
-  (setq flycheck-checkers (remove 'swift flycheck-checkers)))
+  (setq swift-indent-offset 2))
 #+end_src
 
 ** JavaScript
