--- a/emacs.org
+++ b/emacs.org
@@ -249,7 +249,7 @@ electric indentation.
     sucks. Thus we use this snippet to toggle between the two
     modes. Idea by [[http://ergoemacs.org/][Xah Lee]].
 
-#+begin_src elisp
+#+begin_src emacs-lisp
 (defun ck/toggle-line-move-visual ()
   "Toggle behavior of up/down arrow key, by visual line vs logical line."
   (interactive)
@@ -1916,7 +1916,7 @@ We want to be able to edit CMake files in a sane way.
 
    The idea is shamelessly stolen from [[http://endlessparentheses.com/kill-entire-line-with-prefix-argument.html][Endless Parenthesis]]
 
-#+begin_src elisp
+#+begin_src emacs-lisp
 (defmacro bol-with-prefix (function)
   "Define a new function which calls FUNCTION.
 Except it moves to beginning of line before calling FUNCTION when
