--- a/emacs.org
+++ b/emacs.org
@@ -1988,3 +1988,14 @@ prefix argument."
  
 (add-hook 'eshell-mode-hook 'eshell-mode-hook-func)
 #+end_src
+** =typo.el=, the library for typographics in Emacs
+
+#+begin_src emacs-lisp
+  (use-package typo
+    :commands typo-global-mode
+    :init (progn
+            (typo-global-mode 1)
+            (add-hook 'text-mode-hook 'typo-mode)
+            (setq typo-language "German")
+            (setq-default typo-language "German")))
+#+end_src
