--- a/emacs.org
+++ b/emacs.org
@@ -304,11 +304,23 @@ electric indentation.
     (progn
       (set-default-font "Source Code Pro-11")
       (set-fontset-font "fontset-default" nil
-                        (font-spec :size 11 :name "Source Code Pro")))
+                        (font-spec :size 11 :name "Source Code Pro"))
+      (set-face-attribute 'default nil
+                          :family "Source Code Pro"
+                          :height 110
+                          :weight 'normal
+                          :width 'normal)
+      (push '(font . "Source Code Pro-11") default-frame-alist))
   (progn
     (set-default-font "Source Code Pro-09")
     (set-fontset-font "fontset-default" nil
-                      (font-spec :size 9 :name "Source Code Pro"))))
+                      (font-spec :size 9 :name "Source Code Pro"))
+    (set-face-attribute 'default nil
+                        :family "Source Code Pro"
+                        :height 90
+                        :weight 'normal
+                        :width 'normal)
+    (push '(font . "Source Code Pro-09") default-frame-alist)))
 #+end_src
 
 *** Theme
