updated web-mode config to reflect new indentation

--- a/emacs.org
+++ b/emacs.org
@@ -1279,19 +1279,25 @@ contents like CSS, JS and HTML in one file).
   :commands web-mode
 
   :init
-  (add-to-list 'auto-mode-alist '("\\.html\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.phtml\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.tpl\\.php\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.jsp\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.as[cp]x\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.erb\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.mustache\\'" . web-mode))
-  (add-to-list 'auto-mode-alist '("\\.djhtml\\'" . web-mode))
+  (progn
+    (add-to-list 'auto-mode-alist '("\\.html\\'" . web-mode))
+    (add-to-list 'auto-mode-alist '("\\.phtml\\'" . web-mode))
+    (add-to-list 'auto-mode-alist '("\\.tpl\\.php\\'" . web-mode))
+    (add-to-list 'auto-mode-alist '("\\.jsp\\'" . web-mode))
+    (add-to-list 'auto-mode-alist '("\\.as[cp]x\\'" . web-mode))
+    (add-to-list 'auto-mode-alist '("\\.erb\\'" . web-mode))
+    (add-to-list 'auto-mode-alist '("\\.mustache\\'" . web-mode))
+    (add-to-list 'auto-mode-alist '("\\.djhtml\\'" . web-mode)))
 
   :config
-  (custom-set-variables
-   '(web-mode-disable-auto-pairing t)
-   '(web-mode-enable-auto-pairing nil)))
+  (progn
+    (defun ck/web-mode-hook ()
+      "Hooks for Web mode."
+      (setq web-mode-markup-indent-offset 2))
+    (add-hook 'web-mode-hook 'ck/web-mode-hook)
+    (custom-set-variables
+     '(web-mode-disable-auto-pairing t)
+     '(web-mode-enable-auto-pairing nil))))
 #+end_src
 
 ** autocomplete
