--- a/emacs.org
+++ b/emacs.org
@@ -1541,7 +1541,8 @@ We want to be able to edit CMake files in a sane way.
                   ("wanderlust" (or
                                  (mode . wl-folder-mode)
                                  (mode . wl-summary-mode)
-                                 (mode . mime-view-mode))))))))
+                                 (mode . mime-view-mode)))
+                  ("ERC" (mode . erc-mode)))))))
 
   (add-hook 'ibuffer-mode-hook
             (lambda ()
@@ -2016,4 +2017,23 @@ prefix argument."
             (add-hook 'text-mode-hook 'typo-mode)
             (setq typo-language "German")
             (setq-default typo-language "German")))
+#+end_src
+** erc, IRC over Emacs
+
+#+begin_src emacs-lisp
+  (use-package znc
+    :commands znc-all znc-erc
+    :init (progn
+            (load "~/dev/mail/znc.el")
+            (setq erc-startup-file-list '("~/.emacs.d/erc.el"))
+
+            (defun ck/erc-start-or-switch ()
+              "Connect to ERC, or switch to last active buffer"
+              (interactive)
+              (if (get-buffer "*irc-freenode*") ;; ERC already active?
+                  (erc-track-switch-buffer 1) ;; yes: switch to last active
+                (when (y-or-n-p "Start ERC?") ;; no: maybe start ERC
+                  (znc-all))))
+
+            (global-set-key (kbd "C-c e") 'ck/erc-start-or-switch)))
 #+end_src
