use typo-mode for erc chat windows

--- a/emacs.org
+++ b/emacs.org
@@ -2017,6 +2017,7 @@ prefix argument."
     :init (progn
             (typo-global-mode 1)
             (add-hook 'text-mode-hook 'typo-mode)
+            (add-hook 'erc-mode-hook 'typo-mode)
             (setq typo-language "German")
             (setq-default typo-language "German")))
 #+end_src
