--- a/emacs.org
+++ b/emacs.org
@@ -2046,7 +2046,8 @@ prefix argument."
                     mu4e-use-fancy-chars t
                     mu4e-view-show-images t
                     mu4e-attachment-dir "~/Downloads"
-                    mu4e-change-filenames-when-moving t)
+                    mu4e-change-filenames-when-moving t
+                    mu4e-headers-full-search t)
 
               (require 'mu4e-contrib)
 
