--- a/emacs.org
+++ b/emacs.org
@@ -2063,7 +2063,8 @@ prefix argument."
                     mail-envelope-from 'header
                     mail-interactive t
                     message-sendmail-envelope-from 'header
-                    user-full-name "Christian Kruse")
+                    user-full-name "Christian Kruse"
+                    message-kill-buffer-on-exit t)
 
               (defun file-string (file)
                 "Read the contents of a file and return as a string."
