--- a/emacs.org
+++ b/emacs.org
@@ -2067,7 +2067,8 @@ prefix argument."
                     mu4e-headers-full-search t
                     mu4e-get-mail-command "true"
                     mu4e-update-interval 300
-                    mu4e-hide-index-messages t)
+                    mu4e-hide-index-messages t
+                    mu4e-view-show-addresses t)
 
               (require 'mu4e-contrib)
 
